--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
 	"name": "ForceGento",
-	"description": "Build a highly scalable and intuitive online sales environment by integrating Magento and Salesforce CRM.",
+	"description": "B2C eCommerce on Salesforce. Build a highly scalable and intuitive online sales environment by integrating Magento and Salesforce CRM.",
 	"repository": "https://github.com/technomile/B2C-Ecommerce-on-Salesforce-Heroku",
 	"logo": "http://technomile.github.io/img/forcegento.gif",
 	"keywords": ["magento", "salesforce", "heroku", "php", "mysql", "apache", "apache2", "nginx"],
